--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/axios": "^0.14.0",
+    "@types/draft-js": "^0.10.40",
     "@types/jest": "^24.0.25",
     "@types/node": "^12.12.24",
     "@types/react": "^16.9.17",
@@ -17,8 +18,10 @@
     "@types/react-transition-group": "^4.2.4",
     "@types/styled-components": "^5.1.0",
     "axios": "^0.19.1",
+    "draft-js": "^0.11.5",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-images-upload": "^1.2.8",
     "react-scripts": "^3.4.0",
     "react-transition-group": "^4.3.0",
     "styled-components": "^5.1.0",
